--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 		
 		<!-- Css -->
 		 <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+		 <link href="{% static "css/bootstrap-responsive.min.css" %}" rel="stylesheet">
 		<link href="{% static "css/style.css" %}" rel="stylesheet">
 		
 		<meta name="description" content="{% block meta_description %}{% endblock %}">
