--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,20 @@
 {% load static %}
 
 {% block content %}
-	<div class="gallery-cover" {% if contenuto.immagine_box_1 %} style="background-image: url('{{contenuto.immagine_box_1.url}}');" {% endif %}  >
-		<div class="container container-gallery">
-		        <div class="titolo-gallery">
-		                <h1>{% trans "Gallery fotografica"%}</h1>               
-		                <p>{% trans "Immagini di tante edizioni che rappresentano la storia del Mastrogiurato" %}</p>
-	                	<img src="{{contenuto.immagine_box_1.url}}"/>           
-	                	<br>
-	                	<img src="{% static 'img/frecciafucsia.jpg' %}"/>    
-		        </div>          
-		</div>
-	</div>
+        <div class="container-fluid">
+                <div class="container">
+                        <div class="gallery-cover" {% if contenuto.immagine_box_1 %} style="background-image: url('{{contenuto.immagine_box_1.url}}');" {% endif %}  >
+		               <div class="container container-gallery">
+		                       <div class="titolo-gallery">
+		                               <h1>{% trans "Gallery fotografica"%}</h1>               
+		                               <p>{% trans "Immagini di tante edizioni che rappresentano la storia del Mastrogiurato" %}</p>
+		                               <img src="{{contenuto.immagine_box_1.url}}"/>           
+		                               <br>
+		                               <img src="{% static 'img/frecciafucsia.jpg' %}"/>    
+		                       </div>          
+		               </div>
+		       </div>
+                </div>
+        </div>
+	
 {% endblock %}
