mod template css e font

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,63 @@
 body{
 	background-color: #123456;
+	color: #fff;
+}
+img{
+	width: 100%;
+}
+html, body {
+  height: 100%;
+}
+#content{
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -140px;
+}
+.navbar-default{
+	background-color: #FF3311!important;
+	background-image: none!important;
+	border: 0px;
+	box-shadow: none;
+}
+.navbar-default .navbar-nav .active a, .navbar-default .navbar-nav li a {
+	color: #fff;
+}
+.navbar-default .navbar-nav .active a,  .navbar-default .navbar-nav .open a{
+        background-color: #123456;
+        background-image: none;
+}
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover{
+	color: #fff;
+	background-color: #123456;
+}
+#footer, #push {
+    height: 140px;
+    clear: both;
+}
+
+a, a:hover{
+	color: #fff;
+	text-decoration: none;
+}
+.bg-header, footer{
+	background-color: #FF3311;
+}
+.gallery-cover{
+	background-size: cover;
+}
+footer p{
+	margin-top: 50px;
+	text-align: center;
+	font-size: 12px;
+}
+.center{
+	text-align: center;
+}
+.tit-footer{
+	text-transform: uppercase;
+	border-bottom: 1px solid #fff;
+	font-size: 24px;
+	margin-top: 15px;
+	padding-bottom: 10px;
 }
