--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,18 @@
 		<link rel='shortcut icon' type='image/x-icon' href='{% static "img/favicon.ico" %}' />
 		
 		<!-- Css -->
-		 <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-		 <link href="{% static "css/bootstrap-responsive.min.css" %}" rel="stylesheet">
+		<link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
+		 <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">		 
+                <link href="{% static "css/bootstrap-theme.css" %}" rel="stylesheet">
+                <link href="{% static "css/bootstrap-theme.css.map" %}" rel="stylesheet">		
+		<link href="{% static "css/bootstrap-responsive.min.css" %}" rel="stylesheet">
+		<link href="{% static "css/bootstrap-theme.min.css" %}" rel="stylesheet">
+		<link href="{% static "css/bootstrap.css.map" %}" rel="stylesheet">
 		<link href="{% static "css/style.css" %}" rel="stylesheet">
 		
+		<!-- Font  -->
+                <link href="{% static "fonts/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet">       
+				
 		<meta name="description" content="{% block meta_description %}{% endblock %}">
 		<meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
 		<!--[if lt IE 9]>
@@ -27,8 +35,15 @@
 		      
 	</head>
 	<body>
-		{% block content %}
-		{% endblock %}
+	       <div id="content">
+		      {% block content %}
+		      {% endblock %}
+		      <div id="push"></div>		
+		</div>
+		
+		<footer>
+		       {% include "_include/_footer.html" %}
+		</footer>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script src="{% static "js/bootstrap.min.js" %}" ></script>
