--- a/templates/_include/_footer.html
+++ b/templates/_include/_footer.html
@@ -1,28 +1,30 @@
 {% load static %}
 {% load i18n %}
 
-<div class="container-fluid">
-        <div class="container">
-                <div class="row">
-                        <div class="col-sm-4">
-                                <div class="center tit-footer">
-                                        Contenuto Uno
-                                </div>
-                                <a href=""></a>
-                        </div>
-                        <div class="col-sm-4">
-                                 <div class="center tit-footer">
-                                        Contenuto Due
-                                </div>
-                        </div>
-                        <div class="col-sm-4">
-                                <div class="center tit-footer">
-                                         Contenuto Tre
-                                </div>
-                        </div>
-                </div>
-                <div class="row">
-                        <p>Powered by <a href="http://vima-tech.it" title="Sito Vima" target="_blank">Vima</a>. All rights reserved</p>
-                </div>
-        </div>       
-</div>
+<footer>
+	<div class="container-fluid">
+	        <div class="container">
+	                <div class="row">
+	                        <div class="col-sm-4">
+	                                <div class="center tit-footer">
+	                                        Contenuto Uno
+	                                </div>
+	                                <a href=""></a>
+	                        </div>
+	                        <div class="col-sm-4">
+	                                 <div class="center tit-footer">
+	                                        Contenuto Due
+	                                </div>
+	                        </div>
+	                        <div class="col-sm-4">
+	                                <div class="center tit-footer">
+	                                         Contenuto Tre
+	                                </div>
+	                        </div>
+	                </div>
+	                <div class="row">
+	                        <p>Powered by <a href="http://vima-tech.it" title="Sito Vima" target="_blank">Vima</a>. All rights reserved</p>
+	                </div>
+	        </div>       
+	</div>
+</footer>
