--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,8 @@
 		<link href="{% static "css/style.css" %}" rel="stylesheet">
 		
 		<!-- Font  -->
-                <link href="{% static "fonts/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet">       
+                <link href="{% static "fonts/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet">  
+                <link href="{% static "fonts/montserrat/stylesheet.css" %}" rel="stylesheet">      
 				
 		<meta name="description" content="{% block meta_description %}{% endblock %}">
 		<meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
@@ -36,16 +37,22 @@
 	</head>
 	<body>
 	       <div id="content">
+		       <div class="container-fluid bg-header">
+		               {% include "_include/_header.html" %}
+	               </div>      
+	       
 		      {% block content %}
 		      {% endblock %}
 		      <div id="push"></div>		
 		</div>
 		
-		<footer>
-		       {% include "_include/_footer.html" %}
-		</footer>
+		{% include "_include/_footer.html" %}
+
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script type="text/javascript" src="{% static "js/jquery-1.7.min.js" %}"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script src="{% static "js/bootstrap.min.js" %}" ></script>
+		<!-- Contact form -->
+                <script src="{% static "js/jquery.validate.js" %}"></script>
 	</body>
 </html>
