class active in menu

--- a/templates/_include/_header.html
+++ b/templates/_include/_header.html
@@ -45,16 +45,16 @@
                                                                          </div>
                                                                          <div class="collapse navbar-collapse" id="navbar-collapse-1">
                                                                                  <ul class="nav navbar-nav">
-                                                                                       <li class="active">
+                                                                                       <li class="{% ifequal page 'home'%}active{% endifequal %}">
                                                                                               <a href="{% url "home" %}" title="Home">Home</a>
                                                                                        </li>                                                                                                    
-                                                                                       <li class="button">
+                                                                                       <li class="{% ifequal page 'about'%}active{% endifequal %}">
                                                                                               <a href="{% url "about" %}" title="About">About</a>
                                                                                        </li>
-                                                                                       <li class="button">
+                                                                                       <li class="{% ifequal page 'work'%}active{% endifequal %}">
                                                                                               <a href="{% url "work" %}" title="Work">Work</a>
                                                                                        </li>                                                                                                                                                                                                 
-                                                                                        <li class="button">
+                                                                                        <li class="{% ifequal page 'contact'%}active{% endifequal %}">
                                                                                                 <a href="{% url "contact" %}" title="Contact">Contact</a>
                                                                                         </li>
                                                                                  </ul>
