--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+* { margin:0; padding:0;}
+html, body { height: 100%; }
 body{
 	background-color: #123456;
 	color: #123456;
@@ -6,6 +8,8 @@ body{
          url('montserrat-regular-webfont.woff') format('woff');
         font-weight: normal;
         font-style: normal;
+        display: table;
+        width: 100%;
 }
 img{
 	width: 100%;
@@ -17,7 +21,7 @@ html, body {
     min-height: 100%;
     height: auto !important;
     height: 100%;
-    margin: 0 auto -140px;
+    margin: 0 auto -200px;
 }
 .navbar-default{
 	background-color: #fff!important;
@@ -53,9 +57,9 @@ header .header-left{
 .nav>li>a{
 	padding: 10px 10px;
 }
-footer, #push {
-    height: 140px;
-    clear: both;
+footer {;
+    display: table-row;
+     height:1px;
 }
 img#logo{
 	max-width: 200px;
@@ -75,7 +79,7 @@ a, a:hover{
 	color: #123456;
 	text-decoration: none;
 }
-footer a{
+footer a.brand{
 	border-bottom: 1px solid #123456;
 	padding-bottom: 4px;
 }
@@ -85,8 +89,8 @@ footer a{
 .gallery-cover{
 	background-size: cover;
 }
-footer p{
-	margin-top: 50px;
+footer p.sub{
+	margin-top: 14px;
 	text-align: center;
 	font-size: 12px;
 }
@@ -103,7 +107,7 @@ footer p{
 .container-gallery{
 	color: #fff;
 }
-#contatti{
+#contatti, #work, #about{
 	color: #fff;
 }
 #contatti .tit{
@@ -113,6 +117,25 @@ footer p{
 }
 #contatti .text{
         margin-bottom: 50px;
+}
+.social-footer{
+	text-align: center;
+	padding-top: 20px;
+}
+.social-footer a{
+       padding: 0 10px;
+}
+ul.menu-footer{
+        margin-top: 15px;;
+}
+ul.menu-footer > li{
+	list-style: none;
+}
+ul.menu-footer > li.active{
+        list-style: inherit;
+}
+.footer-text{
+	padding-top: 15px;
 }
 #google-map {	
 	position: relative;
