--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,16 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% load static %}
+
+{% block content %}
+        <div class="container">
+                <div class="row">
+			{% if about.immagine_box_2 %}
+			      <div class="col-sm-3">
+			              <img src="{{about.immagine_box_2.url}}"/> 
+			      </div>  
+			{% endif %}
+	       </div>
+	</div>
+                                         
+{% endblock %}
