--- a/templates/work.html
+++ b/templates/work.html
@@ -1,3 +1,20 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% load static %}
+
+{% block content %}
+<div id="work">
+        <div class="container">
+                <div class="row">
+                        {% if work %}
+                                {% for elem in work %}
+	                              <div class="col-sm-3">
+	                                       {{elem.descrizione_work}}
+	                              </div>  
+                                {% endfor %}
+                        {% endif %}
+               </div>
+        </div>
+</div>
+                                         
+{% endblock %}
