--- a/templates/_include/_footer.html
+++ b/templates/_include/_footer.html
@@ -31,7 +31,8 @@
 	                        </div>
 	                </div>
 	                <div class="row">
-	                        <p class="sub">Powered by <a class="brand" href="http://vima-tech.it" title="Sito Vima" target="_blank">Vima</a>. All rights reserved</p>
+	                        <p class="sub">&copy; 2017 Powered by <a class="brand" href="http://vima-tech.it" title="Sito Vima" target="_blank">Vima</a>. All rights reserved</p>
+	                        <p class="sub">Vima s.a.s. via Olmo di Riccio, 58 66034 Lanciano (Ch) p.iva: 02451480699 - rea: CH - 180021 | pec: amministrazione.vima@poste-certificate.it </p>
 	                </div>
 	        </div>       
 	</div>
