--- a/templates/_include/_partial/_menu.html
+++ b/templates/_include/_partial/_menu.html
@@ -1,5 +1,5 @@
 <li class="{% ifequal page 'home'%}active{% endifequal %}">
-       <a href="{% url "home" %}" title="Home">Home</a>
+       <a href="{% url "home" %}/#header-sec" title="Home">Home</a>
 </li>                                                                                                    
 <li class="{% ifequal page 'about'%}active{% endifequal %}">
        <a href="{% url "about" %}" title="About">About</a>
