--- a/templates/about.html
+++ b/templates/about.html
@@ -10,6 +10,7 @@
 			              <img src="{{about.immagine_box_2.url}}"/> 
 			      </div>  
 			{% endif %}
+			<div>{{ about.titolo_about }}</div> 
 	       </div>
 	</div>
                                          
