--- a/templates/_include/_header.html
+++ b/templates/_include/_header.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
        
-
+<section id="header-sec">
          <header class="header fixed clearfix">
                 <div class="container">
                         <div class="row">
@@ -47,7 +47,8 @@
                                  </div>
                          </div>
                  </div>
-         </header>                
+         </header>      
+</section>          
 
  
  
